<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.profile.doctor.ProfileDoctorFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/margin_default"
            style="@style/ViewRounded">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/profile_patient_header_image"
                android:src="@drawable/image_patient"
                android:padding="@dimen/margin_default"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_default">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:id="@+id/profile_patient_header_surname"
                    android:text="@string/profile_header_surname"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:id="@+id/profile_patient_header_name"
                    android:text="@string/profile_header_name"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:id="@+id/profile_patient_header_patronymic"
                    android:text="@string/profile_header_patronymic"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_profile_patient">

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/profile_patient_edit"
            android:text="@string/profile_edit"
            android:layout_margin="@dimen/margin_default"
            style="@style/ButtonRounded"/>

    </LinearLayout>

</ScrollView>